tests/number/leading_dot.out
[31merror[error]: Expect expression.
----- Traceback -----
  ┌─ <unknown>:1:1
  | 
1 | .123
  |  ^
[0m